--- a/ALiTunesSearch/Base.lproj/Main.storyboard
+++ b/ALiTunesSearch/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,57 +17,103 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="wm4-5K-RmP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" id="Dob-Bc-rUb">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
                                 <outlet property="delegate" destination="cOl-Hg-tw9" id="WCU-o6-kq6"/>
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TrackCell" rowHeight="80" id="Fcc-UI-7jy" customClass="TrackCell" customModule="ALiTunesSearch" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="72" width="375" height="80"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="TrackCell" rowHeight="180" id="Fcc-UI-7jy" customClass="TrackCell" customModule="ALiTunesSearch" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="72" width="375" height="180"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Fcc-UI-7jy" id="cWw-9R-hc7">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="179.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gq4-9g-WzQ">
-                                            <rect key="frame" x="8" y="8" width="63.5" height="63.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="Gq4-9g-WzQ" secondAttribute="height" multiplier="1:1" id="MCw-F7-LSt"/>
-                                            </constraints>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gq4-9g-WzQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="179.5"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Name&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7G-1d-Zth">
-                                            <rect key="frame" x="79" y="8" width="78.5" height="23"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Year&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfM-Eh-sgd">
-                                            <rect key="frame" x="79" y="39" width="56" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MWv-tg-lR3">
+                                            <rect key="frame" x="0.0" y="129" width="375" height="50.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Name&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7G-1d-Zth">
+                                                    <rect key="frame" x="8" y="6" width="66.5" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Genre&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfM-Eh-sgd">
+                                                    <rect key="frame" x="8" y="27.5" width="57" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pN-Sv-1Ui">
+                                                    <rect key="frame" x="69" y="28" width="5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Year&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4PZ-n9-WfY">
+                                                    <rect key="frame" x="78" y="27.5" width="46.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Se2-2K-0kC">
+                                                    <rect key="frame" x="128.5" y="27.5" width="5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Director&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8l-qK-fR6">
+                                                    <rect key="frame" x="137.5" y="27" width="70" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59716109154929575" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="B7G-1d-Zth" firstAttribute="leading" secondItem="MWv-tg-lR3" secondAttribute="leading" constant="8" id="4Lq-UY-1b7"/>
+                                                <constraint firstItem="B7G-1d-Zth" firstAttribute="top" secondItem="MWv-tg-lR3" secondAttribute="top" constant="6" id="57u-8C-aHL"/>
+                                                <constraint firstItem="Se2-2K-0kC" firstAttribute="leading" secondItem="4PZ-n9-WfY" secondAttribute="trailing" constant="4" id="8Bz-P8-j9i"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="B7G-1d-Zth" secondAttribute="trailing" constant="8" id="DaU-eh-SN7"/>
+                                                <constraint firstItem="4PZ-n9-WfY" firstAttribute="leading" secondItem="0pN-Sv-1Ui" secondAttribute="trailing" constant="4" id="Jeh-Q1-z8r"/>
+                                                <constraint firstItem="D8l-qK-fR6" firstAttribute="leading" secondItem="Se2-2K-0kC" secondAttribute="trailing" constant="4" id="T6m-OR-v8H"/>
+                                                <constraint firstItem="0pN-Sv-1Ui" firstAttribute="centerY" secondItem="RfM-Eh-sgd" secondAttribute="centerY" id="Vzu-jz-33b"/>
+                                                <constraint firstItem="D8l-qK-fR6" firstAttribute="centerY" secondItem="RfM-Eh-sgd" secondAttribute="centerY" id="Wz1-67-4GN"/>
+                                                <constraint firstItem="Se2-2K-0kC" firstAttribute="centerY" secondItem="4PZ-n9-WfY" secondAttribute="centerY" id="YMH-Yk-NLn"/>
+                                                <constraint firstItem="RfM-Eh-sgd" firstAttribute="top" secondItem="B7G-1d-Zth" secondAttribute="bottom" constant="2" id="aeF-Kf-ohP"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="D8l-qK-fR6" secondAttribute="trailing" constant="6" id="b5l-2p-51u"/>
+                                                <constraint firstAttribute="bottom" secondItem="RfM-Eh-sgd" secondAttribute="bottom" constant="6" id="dmm-UW-Mwy"/>
+                                                <constraint firstItem="4PZ-n9-WfY" firstAttribute="centerY" secondItem="RfM-Eh-sgd" secondAttribute="centerY" id="e6C-K2-pzd"/>
+                                                <constraint firstItem="RfM-Eh-sgd" firstAttribute="leading" secondItem="B7G-1d-Zth" secondAttribute="leading" id="lF9-yr-yFJ"/>
+                                                <constraint firstItem="0pN-Sv-1Ui" firstAttribute="leading" secondItem="RfM-Eh-sgd" secondAttribute="trailing" constant="4" id="nb2-Ce-KvE"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="RfM-Eh-sgd" firstAttribute="leading" secondItem="B7G-1d-Zth" secondAttribute="leading" id="08d-jm-iD8"/>
-                                        <constraint firstItem="Gq4-9g-WzQ" firstAttribute="leading" secondItem="cWw-9R-hc7" secondAttribute="leading" constant="8" id="279-D0-Evj"/>
-                                        <constraint firstItem="B7G-1d-Zth" firstAttribute="top" secondItem="Gq4-9g-WzQ" secondAttribute="top" id="DKk-Q0-bFa"/>
-                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="B7G-1d-Zth" secondAttribute="trailing" constant="8" id="JS8-D7-HaR"/>
-                                        <constraint firstItem="Gq4-9g-WzQ" firstAttribute="top" secondItem="cWw-9R-hc7" secondAttribute="top" constant="8" id="QTZ-XY-ipQ"/>
-                                        <constraint firstItem="RfM-Eh-sgd" firstAttribute="top" secondItem="B7G-1d-Zth" secondAttribute="bottom" constant="8" id="fOA-nQ-gDg"/>
-                                        <constraint firstItem="B7G-1d-Zth" firstAttribute="leading" secondItem="Gq4-9g-WzQ" secondAttribute="trailing" constant="7.5" id="rhb-hH-Mw1"/>
-                                        <constraint firstAttribute="bottom" secondItem="Gq4-9g-WzQ" secondAttribute="bottom" constant="8" id="utu-lJ-q9J"/>
+                                        <constraint firstAttribute="trailing" secondItem="Gq4-9g-WzQ" secondAttribute="trailing" id="3Vd-xx-DXi"/>
+                                        <constraint firstAttribute="bottom" secondItem="MWv-tg-lR3" secondAttribute="bottom" id="7Il-5K-pa4"/>
+                                        <constraint firstItem="Gq4-9g-WzQ" firstAttribute="leading" secondItem="cWw-9R-hc7" secondAttribute="leading" id="Qof-vP-7vN"/>
+                                        <constraint firstItem="Gq4-9g-WzQ" firstAttribute="top" secondItem="cWw-9R-hc7" secondAttribute="top" id="UNg-qL-YnD"/>
+                                        <constraint firstAttribute="trailing" secondItem="MWv-tg-lR3" secondAttribute="trailing" id="VuT-TN-JfW"/>
+                                        <constraint firstAttribute="bottom" secondItem="Gq4-9g-WzQ" secondAttribute="bottom" id="aB5-xe-hr1"/>
+                                        <constraint firstItem="MWv-tg-lR3" firstAttribute="leading" secondItem="cWw-9R-hc7" secondAttribute="leading" id="gNp-Vk-7ch"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="directorLabel" destination="D8l-qK-fR6" id="WFW-32-TjU"/>
+                                    <outlet property="genreLabel" destination="RfM-Eh-sgd" id="plI-x4-1Cw"/>
                                     <outlet property="nameLabel" destination="B7G-1d-Zth" id="U07-pS-N7Y"/>
                                     <outlet property="trackTmageView" destination="Gq4-9g-WzQ" id="TD8-nD-CVD"/>
-                                    <outlet property="yearLabel" destination="RfM-Eh-sgd" id="7zH-sy-TdU"/>
+                                    <outlet property="yearLabel" destination="4PZ-n9-WfY" id="QWp-cc-dHL"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -90,7 +135,7 @@
         <scene sceneID="tfO-rY-phP">
             <objects>
                 <navigationController id="aR2-FT-BoR" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AMp-sV-ETM">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" barStyle="blackTranslucent" id="AMp-sV-ETM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
